<?xml version="1.0"?>
<package format="2">
  <name>h2sl</name>
  <version>2.0.0</version>
  <description>The h2sl package</description>

  <maintainer email="jarkin@ur.rochester.edu">jarkinUR</maintainer>
  <maintainer email="thomas.howard@rochester.edu">tmhoward</maintainer>

  <license>GPLv2</license>

  <url type="repository">https://github.com/tmhoward/h2sl</url>

  <author email="jarkin@ur.rochester.edu">Jacob Arkin</author>
  <author email="thomas.howard@rochester.edu">Thomas M. Howard</author>

  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tinyxml2</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>tinyxml2</exec_depend>

  <build_export_depend>tinyxml2</build_export_depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
